--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <h2 class="h3">Some great intro here</h2>
-            <p class="text-big">Place a nice <strong>introduction</strong> here <strong>to catch reader's attention</strong>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderi.</p>
+            <h2 class="h3">Campus Street Journal</h2>
+            <p class="text-big">Read best Articles here <strong>From</strong> Lifestyle <strong>Technology&Others</strong>A campus blog is an online platform that serves as a hub for sharing news, stories, and experiences about life on a college or university campus. It can be run by students, faculty, or staff and can cover a wide range of topics such as campus events, academics, student life, sports, and community service</p>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2>Subscribe to Newsletter</h2>
-            <p class="text-big">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="text-big">Are you tired of missing out on important news, exclusive content, and valuable insights? By subscribing to our newsletter, you'll have all of this delivered straight to your inbox on a regular basis. Our newsletter is a great way to stay up-to-date with the latest trends and developments in your industry, as well as get insider access to special offers, promotions, and events. Plus, it's completely free! Don't miss out on this opportunity to stay informed and connected – subscribe to our newsletter today.</p>
           </div>
           <div class="col-md-8">
             <div class="form-holder">
